feat: Enhance admin interface with Firebase integration, dynamic brand loading, and improved search functionality

--- a/admin/brands/index.html
+++ b/admin/brands/index.html
@@ -92,31 +92,6 @@
 </aside>
 <!-- Main Content Area -->
 <main class="flex-1 flex flex-col overflow-y-auto bg-background-light dark:bg-background-dark">
-<!-- Top Navbar -->
-<header class="flex items-center justify-between border-b border-border-dark px-8 py-4 sticky top-0 bg-background-dark/80 backdrop-blur-md z-10">
-<div class="md:hidden flex items-center gap-3">
-<span class="material-symbols-outlined text-white">menu</span>
-<h2 class="text-white text-lg font-bold">LIQUIDO</h2>
-</div>
-<div class="hidden md:block">
-<!-- Spacer for desktop -->
-</div>
-<div class="flex items-center gap-4">
-<button class="flex items-center justify-center rounded-lg h-10 w-10 bg-surface-dark text-white hover:bg-border-dark transition-colors">
-<span class="material-symbols-outlined">notifications</span>
-</button>
-<button class="flex items-center justify-center rounded-lg h-10 w-10 bg-surface-dark text-white hover:bg-border-dark transition-colors">
-<span class="material-symbols-outlined">settings</span>
-</button>
-<div class="h-8 w-px bg-border-dark mx-2"></div>
-<button class="flex items-center gap-3 px-3 py-1.5 rounded-lg bg-primary text-background-dark hover:brightness-110 transition-all">
-<div class="size-7 rounded-full bg-background-dark/10 flex items-center justify-center overflow-hidden">
-<img alt="Admin" class="w-full h-full object-cover" data-alt="Admin user profile picture circular crop" src="https://lh3.googleusercontent.com/aida-public/AB6AXuDkfvzYTWYyh_CLvrr_T3X7s-1mRG_IXRxamEJdzCP9tM_HOCpMe4CbzkgH-NglUS540C-0xqHnbOFkZm_AzsL0TmIpnYpm1nDTGMknN2BCUZqsQorYCYkSXQtuj6eA1Kf2Epc1pA2K536BDu6YFvZ8F98uF8IG_MmJn9l6BhdWkJtnAMx3xwfHmnqoKRjZaFSxtQ7k2LBRrWp3-0MpGbjRac9Bt3mX4uUASRMRgZhgnySbYBD8SUV61dwJ5n940JTy7VktTfe8a60"/>
-</div>
-<span class="text-sm font-bold">Admin Profile</span>
-</button>
-</div>
-</header>
 <!-- Content Container -->
 <div class="p-8 max-w-7xl mx-auto w-full">
 <!-- Page Heading -->
@@ -138,23 +113,30 @@
 <div class="absolute inset-y-0 left-0 pl-4 flex items-center pointer-events-none text-[#baba9c] group-focus-within:text-primary transition-colors">
 <span class="material-symbols-outlined">search</span>
 </div>
-<input class="w-full h-14 pl-12 pr-4 rounded-xl bg-surface-dark border-none text-white focus:ring-2 focus:ring-primary/50 placeholder:text-[#baba9c] text-base transition-all" placeholder="Search partner brands by name, category or ID..." type="text"/>
+<input id="brand-search-input" class="w-full h-14 pl-12 pr-4 rounded-xl bg-surface-dark border-none text-white focus:ring-2 focus:ring-primary/50 placeholder:text-[#baba9c] text-base transition-all" placeholder="Search partner brands by name, category or ID..." type="text"/>
 </div>
 </div>
 <!-- Action Bar / View Switcher -->
 <div class="flex items-center gap-2 bg-surface-dark p-1.5 rounded-xl border border-border-dark">
-<button class="flex items-center gap-2 px-4 py-2 rounded-lg bg-border-dark text-white text-sm font-semibold transition-all">
+<button id="grid-view-btn" class="flex items-center gap-2 px-4 py-2 rounded-lg bg-border-dark text-white text-sm font-semibold transition-all">
 <span class="material-symbols-outlined text-sm">grid_view</span>
 <span>Grid View</span>
 </button>
-<button class="flex items-center gap-2 px-4 py-2 rounded-lg text-[#baba9c] hover:text-white text-sm font-semibold transition-all">
+<button id="list-view-btn" class="flex items-center gap-2 px-4 py-2 rounded-lg text-[#baba9c] hover:text-white text-sm font-semibold transition-all">
 <span class="material-symbols-outlined text-sm">format_list_bulleted</span>
 <span>List View</span>
 </button>
 </div>
 </div>
+<!-- Loading State -->
+<div id="brands-loading" class="flex items-center justify-center py-20">
+<div class="flex flex-col items-center gap-4">
+<div class="size-12 border-4 border-primary/20 border-t-primary rounded-full animate-spin"></div>
+<p class="text-[#baba9c] text-sm font-medium">Chargement des marques...</p>
+</div>
+</div>
 <!-- Brands Grid -->
-<div id="admin-brands-grid" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6">
+<div id="admin-brands-grid" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6 hidden">
 <!-- Brands will be loaded dynamically from Firebase -->
 </div>
 <!-- Pagination -->
@@ -168,6 +150,9 @@
 </main>
 </div>
 <!-- Firebase SDK -->
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-analytics-compat.js"></script>
 <script src="../../src/js/services/firebase-config.js"></script>
 <script src="../../src/js/services/firebase-catalog-service.js"></script>
 <script src="../../src/js/services/catalog-service.js"></script>
