--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -213,5 +213,16 @@
 </div>
 </main>
 </div>
+<!-- Firebase SDK -->
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-analytics-compat.js"></script>
+
+<!-- Catalog Services -->
+<script src="../src/js/services/firebase-config.js"></script>
+<script src="../src/js/services/firebase-catalog-service.js"></script>
+<script src="../src/js/services/catalog-service.js"></script>
+<script src="../src/js/modules/catalog-init.js"></script>
+<script src="../src/js/admin/dashboard-stats.js"></script>
 </body></html>
 </body></html>
