--- a/admin/products/index.html
+++ b/admin/products/index.html
@@ -103,10 +103,10 @@
 </div>
 <div class="flex flex-wrap justify-between items-end gap-4">
 <h2 class="text-white text-4xl font-black leading-tight tracking-tight">Product Management</h2>
-<button class="flex items-center gap-2 px-6 py-3 bg-primary text-background-dark rounded-xl font-bold text-sm transition-transform active:scale-95">
+<a href="add.html" class="flex items-center gap-2 px-6 py-3 bg-primary text-background-dark rounded-xl font-bold text-sm transition-transform active:scale-95">
 <span class="material-symbols-outlined">add</span>
 <span>Add New Product</span>
-</button>
+</a>
 </div>
 </header>
 <!-- Filters and Search -->
@@ -156,142 +156,7 @@
 </tr>
 </thead>
 <tbody class="divide-y divide-border-dark">
-<!-- Row 1 -->
-<tr class="hover:bg-white/5 transition-colors group">
-<td class="px-6 py-4">
-<div class="flex items-center gap-4">
-<div class="w-12 h-12 rounded-lg bg-border-dark flex-shrink-0 bg-cover bg-center border border-border-dark/50" data-alt="vape mod device product" style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuCnp6gFsD8JEXkOxBdl-YxaGfRcYCEB8uDGxtvkmzqRfzHEs4JVizOJ_zjApy7FFH5mgtCaMh_jSal0EyHJc_lv0VUbA-7q3uRfR49qqJnauGEHvjTayw8WIC_cMmHw8xz82p0A5KoAdABGclLImavNXFOjWLJqeYKmU6Erj51jCGq5oHTujR6EjdHHFvIR6ZWwXYacpB_GxaSZVaZ99sm3gAt3r0VOLrCT0bI8PZhWhOXL1U3a_i624bhgAldM-6zZZKi_RTWpCBg')"></div>
-<div>
-<p class="text-white font-bold text-sm">GEN 200 Kit</p>
-<p class="text-[#baba9c] text-xs">SKU: VP-G200-BLK</p>
-</div>
-</div>
-</td>
-<td class="px-6 py-4">
-<span class="text-white text-sm">Vaporesso</span>
-</td>
-<td class="px-6 py-4">
-<span class="px-3 py-1 rounded-full bg-border-dark text-[#baba9c] text-[11px] font-bold uppercase tracking-wider">Devices</span>
-</td>
-<td class="px-6 py-4">
-<div class="flex items-center gap-2">
-<div class="size-2 rounded-full bg-primary animate-pulse"></div>
-<span class="text-primary text-xs font-bold uppercase tracking-tighter">In Stock</span>
-</div>
-</td>
-<td class="px-6 py-4">
-<div class="flex justify-end gap-2">
-<button class="p-2 rounded-lg hover:bg-primary/20 text-primary transition-colors">
-<span class="material-symbols-outlined">edit_square</span>
-</button>
-<button class="p-2 rounded-lg hover:bg-red-500/10 text-red-400 transition-colors">
-<span class="material-symbols-outlined">delete</span>
-</button>
-</div>
-</td>
-</tr>
-<!-- Row 2 -->
-<tr class="hover:bg-white/5 transition-colors group">
-<td class="px-6 py-4">
-<div class="flex items-center gap-4">
-<div class="w-12 h-12 rounded-lg bg-border-dark flex-shrink-0 bg-cover bg-center border border-border-dark/50" data-alt="e-liquid bottle product" style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuBXi0cTasrhz5J4660HzBZ8Y-5VZVxa3I25pzojZz4Be5De8yfINGKcHTj8BaqZ0LZ5u0j5vsAgVzCF5BA9_BnMytGKHpLpcqn6sBwdVLVbihkz44FQKLGPkiex3up3o5x4L6XYvxttmW9gXD8xSFHqbSfeTbuxbDP95D7KO_PPDoGaRE5XmBJEVEOkdgEnB119pgatjMoml9H3lZXCqhtsv83z2_DdQn-uxrKdjpvMi6VYtSHGkzubrKZJCNEOigLXZ3nj4-bCPTA')"></div>
-<div>
-<p class="text-white font-bold text-sm">Blueberry Frost 60ml</p>
-<p class="text-[#baba9c] text-xs">SKU: EL-BF-60-3MG</p>
-</div>
-</div>
-</td>
-<td class="px-6 py-4">
-<span class="text-white text-sm">LIQUIDO Select</span>
-</td>
-<td class="px-6 py-4">
-<span class="px-3 py-1 rounded-full bg-border-dark text-[#baba9c] text-[11px] font-bold uppercase tracking-wider">E-Liquids</span>
-</td>
-<td class="px-6 py-4">
-<div class="flex items-center gap-2">
-<div class="size-2 rounded-full bg-orange-400"></div>
-<span class="text-orange-400 text-xs font-bold uppercase tracking-tighter">Low Stock</span>
-</div>
-</td>
-<td class="px-6 py-4">
-<div class="flex justify-end gap-2">
-<button class="p-2 rounded-lg hover:bg-primary/20 text-primary transition-colors">
-<span class="material-symbols-outlined">edit_square</span>
-</button>
-<button class="p-2 rounded-lg hover:bg-red-500/10 text-red-400 transition-colors">
-<span class="material-symbols-outlined">delete</span>
-</button>
-</div>
-</td>
-</tr>
-<!-- Row 3 -->
-<tr class="hover:bg-white/5 transition-colors group">
-<td class="px-6 py-4">
-<div class="flex items-center gap-4">
-<div class="w-12 h-12 rounded-lg bg-border-dark flex-shrink-0 bg-cover bg-center border border-border-dark/50" data-alt="coil pack accessory product" style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuACQWa4FvSKf1vFdW3Q7D1gf2nETXjgVcIQgHGxN1LZqMFRe3rHlp91j4pvTXtpFCgGyENJuWqbxdv5yWD3Ey3jqfVv_hxP1BKGdTTgba0YDMsgXVP3GOs2JY_PacdjFh-dcQ_uEkfBZJIhv270ftxg9llDvd3LlKQScD6xdn0IX_xtEX0dRdzHSc3PMLGJBmJOeD1kvBaPr5o99wX0hVe7mZyJWPX-x3sLe78hDdQg7Uq0tExHBOOnXIPlF3xw5Vkfq9RYhjmXOp8')"></div>
-<div>
-<p class="text-white font-bold text-sm">GTX Mesh Coils (5pk)</p>
-<p class="text-[#baba9c] text-xs">SKU: VP-GTX-M02</p>
-</div>
-</div>
-</td>
-<td class="px-6 py-4">
-<span class="text-white text-sm">Vaporesso</span>
-</td>
-<td class="px-6 py-4">
-<span class="px-3 py-1 rounded-full bg-border-dark text-[#baba9c] text-[11px] font-bold uppercase tracking-wider">Accessories</span>
-</td>
-<td class="px-6 py-4">
-<div class="flex items-center gap-2">
-<div class="size-2 rounded-full bg-slate-500"></div>
-<span class="text-slate-500 text-xs font-bold uppercase tracking-tighter">Out of Stock</span>
-</div>
-</td>
-<td class="px-6 py-4">
-<div class="flex justify-end gap-2">
-<button class="p-2 rounded-lg hover:bg-primary/20 text-primary transition-colors">
-<span class="material-symbols-outlined">edit_square</span>
-</button>
-<button class="p-2 rounded-lg hover:bg-red-500/10 text-red-400 transition-colors">
-<span class="material-symbols-outlined">delete</span>
-</button>
-</div>
-</td>
-</tr>
-<!-- Row 4 -->
-<tr class="hover:bg-white/5 transition-colors group">
-<td class="px-6 py-4">
-<div class="flex items-center gap-4">
-<div class="w-12 h-12 rounded-lg bg-border-dark flex-shrink-0 bg-cover bg-center border border-border-dark/50" data-alt="nord pod system product" style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuDI1ReTtTjD_CkjPnz3eeZum3NSPweFGlX-ObMepRG3Dl58Ff1Pm_Ci7eM1FH-AfMzMdssPOqCDMyYOY_2PY4JgzA32tOlMc-xt4I79k-gag0OLyRkWBrVCk3sf3-6Qusw44DBtvZfoR-BXn-CCr7mXra9opL3XGC5hS3jleuT84N1C0r9TCzQHiGs5k5lvZoNqSPwiZM9ICS2eKRrsUERAzgiX8gDr2x12BbdXYUXu0luxDFbQ-DHoyTykZx0jItMGc9K3cOiYyiQ')"></div>
-<div>
-<p class="text-white font-bold text-sm">Nord 5 Pod Kit</p>
-<p class="text-[#baba9c] text-xs">SKU: SM-N5-RAIN</p>
-</div>
-</div>
-</td>
-<td class="px-6 py-4">
-<span class="text-white text-sm">SMOK</span>
-</td>
-<td class="px-6 py-4">
-<span class="px-3 py-1 rounded-full bg-border-dark text-[#baba9c] text-[11px] font-bold uppercase tracking-wider">Devices</span>
-</td>
-<td class="px-6 py-4">
-<div class="flex items-center gap-2">
-<div class="size-2 rounded-full bg-primary animate-pulse"></div>
-<span class="text-primary text-xs font-bold uppercase tracking-tighter">In Stock</span>
-</div>
-</td>
-<td class="px-6 py-4">
-<div class="flex justify-end gap-2">
-<button class="p-2 rounded-lg hover:bg-primary/20 text-primary transition-colors">
-<span class="material-symbols-outlined">edit_square</span>
-</button>
-<button class="p-2 rounded-lg hover:bg-red-500/10 text-red-400 transition-colors">
-<span class="material-symbols-outlined">delete</span>
-</button>
-</div>
-</td>
-</tr>
+<!-- Products will be loaded dynamically from Firebase -->
 </tbody>
 </table>
 <!-- Pagination -->
@@ -309,4 +174,15 @@
 </section>
 </main>
 </div>
+<!-- Firebase SDK -->
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-analytics-compat.js"></script>
+
+<!-- Catalog Services -->
+<script src="../../src/js/services/firebase-config.js"></script>
+<script src="../../src/js/services/firebase-catalog-service.js"></script>
+<script src="../../src/js/services/catalog-service.js"></script>
+<script src="../../src/js/modules/catalog-init.js"></script>
+<script src="../../src/js/admin/products-list.js"></script>
 </body></html>
